# mmo-proxy-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists-ExternalProjects.cmake  CMakeLists-ExternalProjects.txt  CMakeLists.txt  ProxyConfig.h.in  README.md  build.sh  build_travis.sh  conanfile.txt  mmo-proxy-server.cpp  mmo-proxy-server.h
config/: redis.example.cfg
src/: MonitoringConfig.cpp  MonitoringConfig.h  RedisClient.cpp  RedisClient.h  ServerConfig.cpp  ServerConfig.h
src/monitoring/: MonitoringClient.cpp  MonitoringClient.h  MonitoringMain.cpp  MonitoringMain.h
src/proxy/: ProxyServer.cpp  ProxyServer.h  TCPConnection.cpp  TCPConnection.h  TCPMessage.cpp  TCPMessage.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h
